# canyougrab-api

./: .dockerignore  .gitignore  Dockerfile  HANDOFF.md  LICENSE  README.md  glama.json  go.mod  package.json
backend/: antifraud.py  app.py  auth.py  billing.py  dns_client.py  domain_cache.py  email_utils.py  enrichment.py  health.py  hosted_llm.py  keys.py  link_accounts.py  lookup.py  marketing.py  name_gen.py  name_gen_routes.py  name_starred.py  oauth.py  plans.py  portal.py  queries.py  rdap_router.py  rdap_stats.py  requirements.txt  rq_tasks.py  session.py  share_routes.py  slack.py  tld_registry.py  users.py  valkey_client.py  whois_client.py  worker.py  zone_bloom.py
config/: api-key.oas.json  policies.json  routes.oas.json
docs/: api-response-enrichment.md  backlog-rapid7-fdns.md  dns-load-balancing-plan.md  free-tier-anti-fraud-plan.md  health-check-design.md  zudoku.config.tsx
infra/: Pulumi.admin.yaml  Pulumi.dev-rust-whois.yaml  Pulumi.dev-unbound.yaml  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.rust-whois.yaml  Pulumi.unbound.yaml  Pulumi.yaml  __main__.py  admin_stack.py  api_stack.py  requirements.txt  rust_whois_stack.py  shared.py  tailscale_cleanup.py  tailscale_key.py  unbound_stack.py
mcp-server/: README.md  SUBMISSIONS.md  pyproject.toml  server.json
mcp-server/docs/: anthropic-submission.md  directory-submissions.md
mcp-server/src/canyougrab_mcp/: __init__.py  server.py
mcp-server/widget/: domain-results.html
modules/: api-keys.ts  forward-consumer-header.ts  monthly-quota-check.ts  plan-rate-limit.ts  stripe-checkout.ts  (+5 more)
(+148 files in other folders)
