[project]
name = "mcp-server-canyougrab"
version = "1.0.1"
description = "MCP server for confidence-scored domain availability checking via CanYouGrab.it"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CanYouGrab.it", email = "hello@canyougrab.it" }]
license = { text = "MIT" }
keywords = ["mcp", "domain", "availability", "whois", "dns", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.1.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
remote = ["uvicorn>=0.30"]

[project.scripts]
mcp-server-canyougrab = "canyougrab_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canyougrab_mcp"]
